Criacao de funcao para busca por usuáário e retirada da seguranca da listagem de usuario
